--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ python_requires = ~=3.6
 install_requires =
   jinja2
   click==7.1.2
+  cloudpickle==1.4.1
+  loky==2.8.0
   matplotlib==3.3.0
   numpy==1.19.1
   Pillow==7.2.0
