--- a/tests/converter/unit-test/CMakeLists.txt
+++ b/tests/converter/unit-test/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 include(third/DownloadProject/DownloadProject.cmake)
 download_project(PROJ                googletest
                  GIT_REPOSITORY      https://github.com/google/googletest.git
-                 GIT_TAG             master
+                 GIT_TAG             release-1.10.0
                  ${UPDATE_DISCONNECTED_IF_AVAILABLE}
 )
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
